--- a/src/pages/listPage/style.css
+++ b/src/pages/listPage/style.css
@@ -22,7 +22,7 @@
   margin-top: 5%;
 
   width: 80%;
-  height: 500px;
+  height: 440px;
   overflow: auto;
   border: 1px solid #ccc;
   padding: 30px;
@@ -31,4 +31,17 @@
   border-radius: 5px;
   margin-top: 2%;
   box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.2);
+
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.containerListCard::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
+.containerButton {
+  margin-left: 12%;
+  margin-top: 1%;
 }
